<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.binder.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.example.binder.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/nav_new_book"
        android:name="com.example.binder.ui.newbook.NewBookFragment"
        android:label="@string/menu_new_book"
        tools:layout="@layout/fragment_new_book" />

    <fragment
        android:id="@+id/nav_swipe"
        android:name="com.example.binder.ui.swipe.SwipeFragment"
        android:label="@string/menu_swipe"
        tools:layout="@layout/fragment_new_book" />
</navigation>