<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context=".ui.newbook.NewBookFragment">

        <TextView
            android:id="@+id/new_book_title"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:hint="@string/book_title"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:scrollbars="vertical"
            style="@style/SimpleText"
            app:layout_constraintBottom_toBottomOf="@+id/new_book_photo"
            app:layout_constraintEnd_toStartOf="@+id/new_book_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/new_book_author_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:hint="@string/author_name"
            style="@style/SimpleText"
            app:layout_constraintEnd_toStartOf="@+id/new_book_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_book_title" />

        <TextView
            android:id="@+id/new_book_year"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:hint="@string/year"
            style="@style/SimpleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_book_photo" />

        <TextView
            android:id="@+id/new_book_description"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="24dp"
            android:gravity="bottom"
            android:hint="@string/book_description"
            android:scrollbars="vertical"
            style="@style/SimpleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_book_author_name" />

        <TextView
            android:id="@+id/new_book_giveaway_description"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="24dp"
            android:gravity="bottom"
            android:hint="@string/giveaway_description"
            style="@style/SimpleText"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_book_description" />

        <ImageView
            android:id="@+id/new_book_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/book" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>