<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popup_my_book"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:hint="@string/author_book_name"
        android:maxLines="2"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_match_book" />

    <TextView
        android:id="@+id/popup_match_book"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:hint="@string/author_book_name"
        android:maxLines="2"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/popup_profile_match_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/our_book_photo" />

    <TextView
        android:id="@+id/popup_profile_match_name"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:hint="@string/user_name"
        android:maxLines="2"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_profile_match_photo" />

    <TextView
        android:id="@+id/popup_profile_match_personal"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="24dp"
        android:hint="@string/personal_info"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_profile_match_name" />

    <ImageView
        android:id="@+id/our_book_photo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_my_book"
        app:srcCompat="@drawable/book" />

    <ImageView
        android:id="@+id/other_book_photo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_my_book"
        app:srcCompat="@drawable/book" />

</androidx.constraintlayout.widget.ConstraintLayout>